SERVER-75369 Fix the overflow of total possible enumeration count in LockstepOr enumeration strategy

(cherry picked from commit 6bb0a27e70d7484f4dc9532c35dc1f0c7be873a3)